fix: set correct theme color

--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -20,7 +20,7 @@ const { title, description, image, ...props } = Astro.props;
     <meta name="author" content="Andreas Remdt" />
     <meta name="description" content={trimDescription(description)} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#f9c910" />
+    <meta name="theme-color" content="#00338d" />
 
     <meta property="og:title" content={`${title} | Regio Lions`} />
     <meta property="og:description" content={trimDescription(description)} />
