content: update text on main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,20 +15,14 @@ let news = await getNews(true, 3);
   <section
     class="relative py-16 before:absolute before:bottom-32 before:right-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-fuchsia-100 before:blur-3xl after:absolute after:-bottom-48 after:right-32 after:-z-10 after:aspect-square after:w-72 after:rounded-full after:bg-purple-100 after:blur-3xl md:py-32 dark:before:bg-fuchsia-900 dark:after:bg-purple-950"
   >
-    <h1 class="h1 mb-8 md:w-3/5">
-      Länderübergreifendes Engagement für Deutschland, Frankreich und die
-      Schweiz
-    </h1>
+    <h1 class="h1 mb-8 md:w-3/5">Länderübergreifendes Engagement für Deutschland, Frankreich und die Schweiz</h1>
     <p class="mb-8 text-xl sm:w-2/3 md:w-1/2">
-      Regio Lions ist ein Verbund von mehreren Lions Clubs aus dem Dreiländereck
-      Deutschland, Schweiz und Frankreich mit dem Ziel, gemeinsame Aktivitäten,
-      wie z. B. den 3-Länderlauf oder trinationale Jugendcamps, zu organisieren.
+      Regio Lions ist ein Verbund von mehreren Lions Clubs aus dem Dreiländereck Deutschland, Schweiz und Frankreich mit
+      dem Ziel, gemeinsame Aktivitäten, wie z. B. den 3-Länderlauf oder trinationale Jugendcamps, zu organisieren.
     </p>
     <a href="/news" class="btn btn-primary"> Unsere Aktivitäten &rarr; </a>
 
-    <div
-      class="right-0 mt-8 flex gap-4 md:absolute md:top-40 md:mt-0 md:w-2/5 md:gap-8 lg:top-48"
-    >
+    <div class="right-0 mt-8 flex gap-4 md:absolute md:top-40 md:mt-0 md:w-2/5 md:gap-8 lg:top-48">
       <div class="pt-72">
         <Picture
           src="https://ik.imagekit.io/6uqkzvybwk/regio-lions/news/2022/Huttwil2022-1.jpeg?updatedAt=1707159927735"
@@ -88,31 +82,28 @@ let news = await getNews(true, 3);
     <div class="flex flex-col gap-8 md:flex-row md:gap-16">
       <div class="md:w-3/5">
         <p class="mb-8 text-xl">
-          <a
-            href="https://www.lionsclubs.org/"
-            class="link"
-            target="_blank"
-            rel="noopener noreferrer nofoloow">Lions Clubs International</a
-          > ist eine weltweite Vereinigung von Menschen, die in freundschaftlicher
-          Verbundenheit bereit sind, sich den gesellschaftlichen Problemen unserer
-          Zeit zu stellen und uneigennützig an ihrer Lösung mitzuwirken.
+          <a href="https://www.lionsclubs.org/" class="link" target="_blank" rel="noopener noreferrer nofoloow"
+            >Lions Clubs International</a
+          > ist eine weltweite Vereinigung von Menschen, die in freundschaftlicher Verbundenheit bereit sind, sich den gesellschaftlichen
+          Problemen unserer Zeit zu stellen und uneigennützig an ihrer Lösung mitzuwirken.
         </p>
-        <p class="mb-8">
-          Schon in der Vergangenheit gab es Kontaktversuche der Clubs der 3
-          Länder, jedoch ohne Erfolg. Durch einen Vorstoß von André Tritz -
-          damaliger Präsident des Lions Clubs Saint Louis - und der Akzeptanz
-          anderer regionaler Clubs kam es 2007 schließlich zur Gründung der
-          Regio Lions.
+        <p class="mb-4">
+          Schon in der Vergangenheit gab es Kontaktversuche der Clubs der 3 Länder, jedoch ohne Erfolg. Durch einen
+          Vorstoß von André Tritz - damaliger Präsident des Lions Clubs Saint Louis - und der Akzeptanz anderer
+          regionaler Clubs kam es 2007 schließlich zur Gründung der Regio Lions.
         </p>
-        <p>
-          Dank internationaler Bemühungen und dem Engagement einiger besonderer
-          Personen ist ein starker Verbund, bestehend aus 17 Clubs aus den
-          Dreiländereck, entstanden. Wir sind maßgeblich für die Ausrichtung
-          diverse trinationaler Aktivitäten verantwortlich: der 3-Länderlauf in
-          Basel, Sommercamps mit Jugendlichen auf einem Bauernhof in der
-          Schweiz, trinationale Hausbooten mit Jugendlichen in Frankreich oder
-          die Teilnahme am "Em Bebbi sy Jazz!" in Basel.
+        <p class="mb-4">
+          Am 21. März 2005 lud Peter Völker zum 1. Regio-Lions-Treffen Rolf Leimgruber und Francois Pflieger ins Hotel
+          "Atlas" an der Palmrainbrücke ein. Damit war der Grundstein für die grenzübergreifende Zusammenarbeit gelegt.
         </p>
+        <p class="mb-4">
+          Dank internationaler Bemühungen und dem Engagement einiger besonderer Personen ist ein starker Verbund,
+          bestehend aus 17 Clubs aus den Dreiländereck, entstanden. Wir sind maßgeblich für die Ausrichtung diverse
+          trinationaler Aktivitäten verantwortlich: der 3-Länderlauf in Basel, Sommercamps mit Jugendlichen auf einem
+          Bauernhof in der Schweiz, trinationale Hausbooten mit Jugendlichen in Frankreich oder die Teilnahme am "Em
+          Bebbi sy Jazz!" in Basel.
+        </p>
+        <p>Am 21. März 2025 feiern Regio-Lions ihr 20-jähriges Jubiläum.</p>
       </div>
 
       <ul class="space-y-8 md:w-2/5">
@@ -145,41 +136,36 @@ let news = await getNews(true, 3);
   <section class="py-16 md:py-32 lg:py-48">
     <h2 class="h2 mb-8">Unsere Ziele</h2>
     <p class="mb-12 text-xl md:w-2/3 lg:w-1/2">
-      Wie jede Organisation verfolgen wir mit unserem Engagement eine Reihe von
-      Zielen, welche uns motivieren und als Verbund definieren. Nachfolgend
-      finden Sie unsere 6 Hauptziele.
+      Wie jede Organisation verfolgen wir mit unserem Engagement eine Reihe von Zielen, welche uns motivieren und als
+      Verbund definieren. Nachfolgend finden Sie unsere 6 Hauptziele.
     </p>
 
     <ul class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
       <li>
         <h3 class="h3 mb-2">Zusammen arbeiten</h3>
-        Kontakte zwischen den Lions Clubs der drei Länder (Deutschland, Frankreich,
-        Schweiz) schaffen, verbessern und vereinfachen.
+        Kontakte zwischen den Lions Clubs der drei Länder (Deutschland, Frankreich, Schweiz) schaffen, verbessern und vereinfachen.
       </li>
       <li>
         <h3 class="h3 mb-2">Grenzen überwinden</h3>
-        Wie der Lions Club International verfolgen auch wir die Verbesserung der
-        Beziehungen zwischen den Völkern.
+        Wie der Lions Club International verfolgen auch wir die Verbesserung der Beziehungen zwischen den Völkern.
       </li>
       <li>
         <h3 class="h3 mb-2">3-Länderlauf unterstützen</h3>
-        Die Unterstützung des grenzüberschreitenden Volkslaufs nutzen wir als Einnahmequelle,
-        um unsere Aktivitäten zu finanzieren.
+        Die Unterstützung des grenzüberschreitenden Volkslaufs nutzen wir als Einnahmequelle, um unsere Aktivitäten zu finanzieren.
       </li>
       <li>
         <h3 class="h3 mb-2">"Laufend" gutes tun</h3>
-        Ziel ist es, Menschen aus der Region nicht bloß durch Geldspenden, sondern
-        durch selbst durchgeführte Aktivitäten zu unterstützen.
+        Ziel ist es, Menschen aus der Region nicht bloß durch Geldspenden, sondern durch selbst durchgeführte Aktivitäten
+        zu unterstützen.
       </li>
       <li>
         <h3 class="h3 mb-2">Bekannt machen</h3>
-        Jeder kann helfen und sich engagieren. Mit unserer Arbeit hoffen wir dies
-        in der Region bekannt machen zu können.
+        Jeder kann helfen und sich engagieren. Mit unserer Arbeit hoffen wir dies in der Region bekannt machen zu können.
       </li>
       <li>
         <h3 class="h3 mb-2">Kindern helfen</h3>
-        Wir erarbeiten Finanzmittel um ein zweisprachige, trinationale Ferienlager
-        zu Gunsten von Jugendlichen der Region zu finanzieren.
+        Wir erarbeiten Finanzmittel um ein zweisprachige, trinationale Ferienlager zu Gunsten von Jugendlichen der Region
+        zu finanzieren.
       </li>
     </ul>
   </section>
@@ -187,8 +173,7 @@ let news = await getNews(true, 3);
   <section>
     <h2 class="h2 mb-8">Aktuelle News</h2>
     <p class="mb-12 text-xl md:w-2/3 lg:w-1/2">
-      Lesen Sie hier mehr zu unseren aktuellen Aktivitäten und was wir in
-      letzter Zeit gemacht haben.
+      Lesen Sie hier mehr zu unseren aktuellen Aktivitäten und was wir in letzter Zeit gemacht haben.
     </p>
 
     <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
@@ -205,17 +190,14 @@ let news = await getNews(true, 3);
     </div>
 
     <div class="mt-12 text-center">
-      <a href="/news" class="btn btn-primary">
-        Mehr News finden Sie hier &rarr;
-      </a>
+      <a href="/news" class="btn btn-primary"> Mehr News finden Sie hier &rarr; </a>
     </div>
   </section>
 
   <section class="pt-16 md:pt-32 lg:pt-48">
     <h2 class="h2 mb-8">Unsere Mittel</h2>
     <p class="mb-12 text-xl md:w-2/3 lg:w-1/2">
-      Erfahren Sie mehr über die Bedingungen unserer einzelnen Clubs, damit wir
-      als Gemeinschaft Erfolg haben.
+      Erfahren Sie mehr über die Bedingungen unserer einzelnen Clubs, damit wir als Gemeinschaft Erfolg haben.
     </p>
 
     <div class="gap-16 md:flex">
@@ -230,29 +212,17 @@ let news = await getNews(true, 3);
       />
 
       <ul class="ml-4 list-disc space-y-6">
+        <li>Jeder Lions Club beteiligt sich mit 500€ am Sponsoring oder Patronat des 3-Länderlaufes.</li>
+        <li>Die Organisation des Rennens zahlt den Regio Lions einen Betrag von 2 CHF pro Teilnehmer zurück.</li>
+        <li>Am Tag des Laufes befindet sich ein Ausschank-Stand auf dem Basler-Marktplatz.</li>
+        <li>Es gibt 1 - 2 Regio-Beauftragte pro Club. Am besten bleiben sie mehrere Jahre in ihrem Amt.</li>
         <li>
-          Jeder Lions Club beteiligt sich mit 500€ am Sponsoring oder Patronat
-          des 3-Länderlaufes.
+          Der 3-Länderlauf ist ebenfalls ein Spenden-Lauf. Jeder Teilnehmer darf auch mehr als sein Anmeldungsgeld
+          entrichten.
         </li>
         <li>
-          Die Organisation des Rennens zahlt den Regio Lions einen Betrag von 2
-          CHF pro Teilnehmer zurück.
-        </li>
-        <li>
-          Am Tag des Laufes befindet sich ein Ausschank-Stand auf dem
-          Basler-Marktplatz.
-        </li>
-        <li>
-          Es gibt 1 - 2 Regio-Beauftragte pro Club. Am besten bleiben sie
-          mehrere Jahre in ihrem Amt.
-        </li>
-        <li>
-          Der 3-Länderlauf ist ebenfalls ein Spenden-Lauf. Jeder Teilnehmer darf
-          auch mehr als sein Anmeldungsgeld entrichten.
-        </li>
-        <li>
-          Wenn ein neuer Sponsor dank einem Lions-Mitglied gefunden wird, kommt
-          20% des Betrages zu Gunsten der Regio Lions.
+          Wenn ein neuer Sponsor dank einem Lions-Mitglied gefunden wird, kommt 20% des Betrages zu Gunsten der Regio
+          Lions.
         </li>
       </ul>
     </div>
