--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -13,6 +13,8 @@ export let getStaticPaths = (async ({ paginate }) => {
 }) satisfies GetStaticPaths;
 
 let { page } = Astro.props;
+
+export const prerender = true;
 ---
 
 <Layout
@@ -20,14 +22,11 @@ let { page } = Astro.props;
   description="Lernen Sie mehr über das was wir machen. Auf dieser Seite finden Sie eine Historie unserer finanzierten oder selbst durchgeführten Aktivitäten"
 >
   <Hero title="Aktuelle News">
-    Lernen Sie mehr über das was wir machen. Auf dieser Seite finden Sie eine
-    Historie unserer finanzierten oder selbst durchgeführten Aktivitäten, etwa
-    den 3-Länderlauf oder die trinationalen Ferienlager mit Jugendlichen.
+    Lernen Sie mehr über das was wir machen. Auf dieser Seite finden Sie eine Historie unserer finanzierten oder selbst
+    durchgeführten Aktivitäten, etwa den 3-Länderlauf oder die trinationalen Ferienlager mit Jugendlichen.
   </Hero>
 
-  <div
-    class="mb-16 grid grid-cols-1 gap-x-4 gap-y-16 sm:grid-cols-2 md:gap-x-8 lg:grid-cols-1"
-  >
+  <div class="mb-16 grid grid-cols-1 gap-x-4 gap-y-16 sm:grid-cols-2 md:gap-x-8 lg:grid-cols-1">
     {
       page.data.map((entry) => (
         <NewsPreview
