--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -15,6 +15,8 @@ export async function getStaticPaths() {
 
 let { entry } = Astro.props;
 let { Content } = await entry.render();
+
+export const prerender = true;
 ---
 
 <Layout
@@ -60,9 +62,7 @@ let { Content } = await entry.render();
                   d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
                 />
               </svg>
-              <p class="text-sm text-gray-500 dark:text-gray-100">
-                {entry.data.image.caption}
-              </p>
+              <p class="text-sm text-gray-500 dark:text-gray-100">{entry.data.image.caption}</p>
             </figcaption>
           ) : null}
         </figure>
